feat(proxy): Cluster setup

--- a/kafkalot-common/src/main/resources/reference.conf
+++ b/kafkalot-common/src/main/resources/reference.conf
@@ -1,20 +1,55 @@
+kafkalot {
+  common {
+    akka {
+      clusterSystemName = "KafkalotClusterSystem"
+    }
+  }
+}
+
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   log-dead-letters = on
   log-dead-letters-during-shutdown = on
-  loglevel = "debug"
+  loglevel = "INFO"
   stdout-loglevel = "INFO"
   log-config-on-start = off
 
   actor {
-    debug {
-      log-sent-messages = on
-      log-received-messages = on
-      receive = on
-      autoreceive = on
-      lifecycle = on
-      unhandled = on
-      event-stream = on
-    }
+    # cluster setup
+    provider = "akka.cluster.ClusterActorRefProvider"
+
+    # debug {
+    #   log-sent-messages = on
+    #   log-received-messages = on
+    #   receive = on
+    #   autoreceive = on
+    #   lifecycle = on
+    #   unhandled = on
+    #   event-stream = on
+    # }
   }
+
+  remote {
+    log-remote-lifecycle-events = off
+  }
+
+  cluster {
+    seed-nodes = [ "akka.tcp://KafkalotClusterSystem@127.0.0.1:2551" ]
+    seed-nodes = ${?AKKA_CLUSTER_SEED_NODES}
+
+    role {
+      seed.min-nr-of-members = 1
+    }
+
+    # Disable legacy metrics in akka-cluster.
+    metrics.enabled = off
+
+    # auto downing is NOT safe for production deployments.
+    # auto-down-unreachable-after = 10s
+  }
+
+  # Enable metrics extension in akka-cluster-metrics.
+  extensions = [
+    "akka.cluster.metrics.ClusterMetricsExtension"
+  ]
 }
