--- a/kafkalot-proxy/src/main/resources/application.conf
+++ b/kafkalot-proxy/src/main/resources/application.conf
@@ -9,3 +9,18 @@ kafkalot {
     }
   }
 }
+
+akka {
+  remote {
+    netty.tcp {
+      hostname = "127.0.0.1"
+      hostname = ${?KAFKALOT_ADMIN_AKKA_CLUSTER_HOSTNAME}
+      port = 2551
+      port = ${?KAFKALOT_ADMIN_AKKA_CLUSTER_PORT}
+    }
+  }
+
+  cluster {
+    roles = ["seed"]
+  }
+}
