refactor: Config related classes

--- a/kafkalot-common/src/main/resources/reference.conf
+++ b/kafkalot-common/src/main/resources/reference.conf
@@ -15,22 +15,17 @@ akka {
   log-config-on-start = off
 
   actor {
-    # cluster setup
     provider = "akka.cluster.ClusterActorRefProvider"
 
-    # debug {
-    #   log-sent-messages = on
-    #   log-received-messages = on
-    #   receive = on
-    #   autoreceive = on
-    #   lifecycle = on
-    #   unhandled = on
-    #   event-stream = on
-    # }
-  }
-
-  remote {
-    log-remote-lifecycle-events = off
+    debug {
+      log-sent-messages = off
+      log-received-messages = off
+      receive = off
+      autoreceive = off
+      lifecycle = off
+      unhandled = off
+      event-stream = off
+    }
   }
 
   cluster {
@@ -49,7 +44,5 @@ akka {
   }
 
   # Enable metrics extension in akka-cluster-metrics.
-  extensions = [
-    "akka.cluster.metrics.ClusterMetricsExtension"
-  ]
+  extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
 }
