--- a/kafkalot-proxy/src/main/resources/application.conf
+++ b/kafkalot-proxy/src/main/resources/application.conf
@@ -5,22 +5,36 @@ kafkalot {
       port = ${?KAFKALOT_PROXY_PORT}
 
       host = "0.0.0.0"
-      port = ${?KAFKALOT_PROXY_HOST}
+      host = ${?KAFKALOT_PROXY_HOST}
     }
   }
 }
 
 akka {
-  remote {
-    netty.tcp {
-      hostname = "127.0.0.1"
-      hostname = ${?KAFKALOT_ADMIN_AKKA_CLUSTER_HOSTNAME}
-      port = 2551
-      port = ${?KAFKALOT_ADMIN_AKKA_CLUSTER_PORT}
+  actor.provider = "akka.actor.LocalActorRefProvider"
+
+  persistence {
+    journal {
+      plugin = "akka.persistence.journal.leveldb"
+      leveldb.dir = "target/journal"
+      leveldb.dir = ${?AKKA_PERSISTENCE_JOURNAL_DIR}
+    }
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.local"
+      local.dir = "target/snapshots"
+      local.dir = ${?AKKA_PERSISTENCE_SNAPSHOT_DIR}
     }
   }
 
-  cluster {
-    roles = ["seed"]
-  }
+  # Disable cluster setup
+  # remote {
+  #   netty.tcp {
+  #     hostname = "127.0.0.1"
+  #     hostname = ${?KAFKALOT_PROXY_AKKA_CLUSTER_HOSTNAME}
+  #     port = 2551
+  #     port = ${?KAFKALOT_PROXY_AKKA_CLUSTER_PORT}
+  #   }
+  # }
+  cluster { }
+  extensions = [ ]
 }
