--- a/kafkalot-proxy-ui/package.json
+++ b/kafkalot-proxy-ui/package.json
@@ -110,7 +110,9 @@
     "yargs": "^5.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.16.0",
     "babel-eslint": "^6.0.0-beta.6",
+    "babel-loader": "^6.2.5",
     "babel-plugin-istanbul": "^2.0.1",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
