chore: Add docker-compose.yml

--- a/kafkalot-common/src/main/resources/reference.conf
+++ b/kafkalot-common/src/main/resources/reference.conf
@@ -8,10 +8,10 @@ kafkalot {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  log-dead-letters = on
-  log-dead-letters-during-shutdown = on
-  loglevel = "INFO"
-  stdout-loglevel = "INFO"
+  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
+  loglevel = "DEBUG"
+  stdout-loglevel = "DEBUG"
   log-config-on-start = off
 
   actor {
